<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fundo2"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:id="@+id/tvLabelTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvLabelSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitulo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSubtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <TextView
        android:id="@+id/tvLabelAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <TextView
        android:id="@+id/tvLabelEditora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editora"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etEditora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <TextView
        android:id="@+id/tvEdicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edicao"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etEdicao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <TextView
        android:id="@+id/tvLabelAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ano"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etAno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="number" />

    <TextView
        android:id="@+id/tvLabelNumeroPaginas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numeroPaginas"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etNumeroPaginas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvLabelISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isbn"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <TextView
        android:id="@+id/tvLabelDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/bGravar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gravar" />

</LinearLayout>
</ScrollView>