<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundo2"
        android:orientation="vertical"
        android:padding="15dp" >
    
    <TextView
        android:id="@+id/tvLabelTituloInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTituloInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n/a"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvLabelSubtituloInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitulo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSubtituloInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n/a"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvLabelAutorInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvAutorInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n/a"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvLabelEditoraInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editora"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvEditoraInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n/a"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvLabelEdicaoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edicao"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvEdicaoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n/a"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvLabelAnoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ano"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvAnoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n/a"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvLabelNumeroPaginasInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numeroPaginas"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvNumeroPaginasInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n/a"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvLabelISBNInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isbn"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvISBNInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n/a"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvLabelDescricaoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvDescricaoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n/a"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    </ScrollView>
