<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo2"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:id="@+id/tvBusca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/busca"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etBusca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/bBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BotaoBuscar" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNenhum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nenhum"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listLivro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.62"
        android:divider="@drawable/estante"
        android:dividerHeight="10sp" >
    </ListView>

</LinearLayout>